animation parameters change

--- a/jump.html
+++ b/jump.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 <style>
-.end{width:20px;height:20;border-radius:50%;background:red;position:absolute;top:300px;left:800px;}
+.end{width:20px;height:20;border-radius:50%;background:red;position:fixed;top:300px;left:800px;}
 .start{width:20px;height:20px;position:absolute;background:green;border-radius:50%;}
-body{height:20000px;}
+body{height:2000px;}
 </style>
 
 
-<script src="http://requirejs.org/docs/release/2.1.15/comments/require.js" ></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.min.js" ></script>
 </head>
 <body>
 
